# OpenglModel

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CustomOpenglWidget.cpp  CustomOpenglWidget.h  ParaConfigWidget.cpp  ParaConfigWidget.h  ParaConfigWidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
DependLib/assimp/include/assimp/: types.h
DependLib/assimp/lib/: assimp-vc142-mt.exp
DependLib/glad/include/glad/: glad.h
DependLib/spdlog/lib/: spdlog.exp
Doc/: 模型加载.md
glsl/Cube/: 123.txt
glsl/CubeColor/: 123.txt
glsl/LightCasters/: 123.vert  456.frag  readme.md
glsl/LightMap/: 456.frag  readme.md
glsl/PhongModel/: 123.vert  456.frag  single.frag
glsl/Rectangle/: 123.txt  456.txt
src/: Engine.7z
src/Graphics/: Graphics.cpp  Graphics.h  ManageEngine.cpp  ManageEngine.h  Shader.cpp  Shader.h
src/Graphics/CubeMapsModel/: CubeMapsModel.cpp  CubeMapsModel.h
src/Graphics/GeneralModel/: GeneralModel.cpp  GeneralModel.h  ScreenRenderModel.cpp  ScreenRenderModel.h  fbo_fragment.fs  fragment_shader.fs  pick_fragment.fs  stencil_fragment.fs  vertex_shader.vs
src/ModelDatas/: CreatModelData.cpp  CreatModelData.h  CreatModelDataImpl.cpp  CreatModelDataImpl.h  CylinderVerticesData.cpp  CylinderVerticesData.h  ModelDataInterFace.h  ToursVerticesData.cpp  ToursVerticesData.h
src/OpenglWidget/: HoverToolWidget.cpp  HoverToolWidget.h
src/Utils/: OpengHearder.h  Utils.cpp  Utils.h
